--- a/css/styles.css
+++ b/css/styles.css
@@ -45,6 +45,9 @@ p {
   margin-top: 0;
   margin-bottom: 0;
 }
+img {
+  display: block;
+}
 header {
   border-bottom: 1px solid #ececec;
 }
@@ -314,7 +317,4 @@ header {
   border-bottom: 1px solid #eeeeee;
   border-left: 1px solid #eeeeee;
   border-right: 1px solid #eeeeee;
-}
-.projects-img {
-  display: block;
 }
