--- a/css/styles.css
+++ b/css/styles.css
@@ -128,9 +128,13 @@ header {
   color: var(--accent-color);
 }
 .hero {
+  height: 600px;
+  max-width: 1600px;
   padding-top: 200px;
   padding-bottom: 200px;
   background-color: var(--background-color);
+  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+    url(../images/hero-img.jpg);
   text-align: center;
   margin-left: auto;
   margin-right: auto;
