--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,7 @@
   --invert-text-color: #ffffff;
   --background-color: #2f303a;
   --button-background: #f5f4fa;
+  --icon-basic-color: #afb1b8;
 }
 
 html {
@@ -128,33 +129,21 @@ header {
   color: var(--main-text-color);
   font-weight: 500;
 }
-.contacts::before {
-  display: inline-block;
-  margin-right: 10px;
-  content: '';
-  background-size: contain;
-  color: var(--main-text-color);
-}
-.contacts.email::before {
-  width: 16px;
-  height: 12px;
-  background-image: url(../images/envelope.svg);
-}
-.contacts.tel::before {
-  width: 10px;
-  height: 16px;
-  background-image: url(../images/smartphone.svg);
-  background-repeat: no-repeat;
-}
 .contacts .link:hover,
 .contacts .link:focus {
   color: var(--accent-color);
 }
-.contacts.email:hover::before,
-.contacts.tel:hover::before {
-  color: var(--accent-color);
+.icon-header {
+  display: block;
+  padding: 32px 0;
+  margin-right: 10px;
+  fill: var(--main-text-color);
+}
+.icon-header:hover {
+  fill: var(--accent-color);
   cursor: pointer;
 }
+
 .hero {
   height: 600px;
   max-width: 1600px;
@@ -204,26 +193,6 @@ header {
   margin-right: 30px;
   width: calc((100% - 90px) / 4);
 }
-.features-list::before {
-  display: block;
-  content: '';
-  height: 120px;
-  background-size: contain;
-  background-position: center;
-  margin-bottom: 30px;
-}
-.features-list:nth-child(1)::before {
-  background-image: url(../images/features/Group\ 1.svg);
-}
-.features-list:nth-child(2)::before {
-  background-image: url(../images/features/Group\ 2.svg);
-}
-.features-list:nth-child(3)::before {
-  background-image: url(../images/features/Group\ 3.svg);
-}
-.features-list:nth-child(4)::before {
-  background-image: url(../images/features/Group\ 4.svg);
-}
 .features-list:nth-child(4) {
   margin-right: 0;
 }
@@ -236,6 +205,9 @@ header {
 .features-description {
   line-height: 1.71;
   letter-spacing: 0.03em;
+}
+.icon-features {
+  margin-bottom: 30px;
 }
 .work-examples {
   display: flex;
@@ -283,6 +255,57 @@ header {
   font-size: 16px;
   color: var(--main-text-color);
 }
+.networks {
+  display: flex;
+  justify-content: space-evenly;
+  margin-top: 16px;
+}
+.networks-item:not(:last-child) {
+  margin-right: 10px;
+}
+.networks-icon {
+  background-size: contain;
+  fill: var(--icon-basic-color);
+}
+.networks-icon:hover {
+  fill: var(--invert-text-color);
+}
+.social-link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 44px;
+  height: 44px;
+  border-radius: 50%;
+}
+.social-link:hover {
+  background-color: var(--accent-color);
+}
+.clients {
+  display: flex;
+  margin-top: 50px;
+}
+.client-block {
+  width: 170px;
+  height: 92px;
+  border: 1px solid var(--icon-basic-color);
+  border-radius: 2px;
+}
+.client-block:not(:last-child) {
+  margin-right: 30px;
+}
+.client-block:hover {
+  border: 1px solid var(--accent-color);
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+}
+.client-icon {
+  margin: 16px 32px;
+  align-content: center;
+  fill: var(--icon-basic-color);
+}
+.client-icon:hover {
+  fill: var(--accent-color);
+}
 .footer {
   padding-top: 60px;
   padding-bottom: 60px;
@@ -290,6 +313,7 @@ header {
 }
 .footer-block {
   display: flex;
+  align-items: center;
 }
 .logo.footer-logo {
   margin-right: 0;
@@ -315,12 +339,36 @@ header {
   margin-bottom: 20px;
 }
 .join {
-  color: var(--invert-text-color);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 20px;
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.03em;
   text-transform: uppercase;
+  color: var(--invert-text-color);
+}
+.footer-link {
+  display: flex;
+  width: 44px;
+  height: 44px;
+}
+.networks-icon-footer {
+  fill: var(--invert-text-color);
+}
+.social-link-footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 44px;
+  height: 44px;
+  border-radius: 50%;
+  background-color: rgba(255, 255, 255, 0.1);
+}
+.social-link-footer:hover {
+  background-color: var(--accent-color);
 }
 
 /* Стили для portfolio.html */
@@ -350,6 +398,7 @@ header {
 .portfolio-button:hover {
   color: var(--invert-text-color);
   background-color: var(--accent-color);
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 }
 .projects {
   display: flex;
@@ -360,6 +409,9 @@ header {
   width: 370px;
   margin-right: 30px;
   margin-bottom: 30px;
+}
+.projects-item:hover {
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 }
 .projects-item:nth-child(3n) {
   margin-right: 0;
@@ -385,4 +437,3 @@ header {
   border-left: 1px solid #eeeeee;
   border-right: 1px solid #eeeeee;
 }
-
