--- a/css/styles.css
+++ b/css/styles.css
@@ -299,7 +299,10 @@ header {
   align-items: center;
   margin-top: 50px;
 }
-.client {
+.client:not(:last-child) {
+  margin-right: 30px;
+}
+.client-link {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -308,21 +311,12 @@ header {
   border: 1px solid var(--icon-basic-color);
   border-radius: 4px;
 }
-.client:not(:last-child) {
-  margin-right: 30px;
-}
-.client-block {
-  display: block;
-  width: 100%;
-  height: 100%;
-}
-.client-block:hover {
+.client-link:hover,
+.client-link:focus {
   border: 1px solid var(--accent-color);
+  border-radius: 4px;
 }
-.client:hover {
-  border: 1px solid var(--accent-color);
-}
-.client:hover .client-icon {
+.client-link:hover .client-icon {
   fill: var(--accent-color);
 }
 .client-icon {
