--- a/css/styles.css
+++ b/css/styles.css
@@ -287,10 +287,14 @@ header {
   height: 44px;
   border-radius: 50%;
 }
-.social-link:hover {
+.social-link:hover,
+.social-link:focus {
   background-color: var(--accent-color);
 }
 .social-link:hover .networks-icon {
+  fill: var(--invert-text-color);
+}
+.social-link:focus .networks-icon {
   fill: var(--invert-text-color);
 }
 .clients-list {
@@ -383,7 +387,8 @@ header {
   border-radius: 50%;
   background-color: rgba(255, 255, 255, 0.1);
 }
-.social-link-footer:hover {
+.social-link-footer:hover,
+.social-link-footer:focus {
   background-color: var(--accent-color);
 }
 
